# block-collector

./: .env.dummy  Dockerfile  README.md  pyproject.toml
.github/: lint.yml
.github/workflows/: build_and_push.yml
notebooks/: Untitled.ipynb  block_analytics.ipynb  block_header.ipynb  latest_proposer_block.hex
src/block_collector/: config.py  gcp_storage.py  main.py  parser.py  retriever.py
